// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductInfo adult content should match snapshot 1`] = `
<div>
  <span
    class="root image-overlay"
  >
    <img
      class="image adult"
      data-testid="product-info:adult-image"
      src="https://www.images.com/some-product/1"
    />
    <svg
      class="adult-icon"
      height="64"
      viewBox="0 0 64 64"
      width="64"
    >
      <path
        clip-rule="evenodd"
        d="M54.827 19.2h-2.56v-7.253h-7.254v-2.56h7.254V2.133h2.56v7.254h7.253v2.56h-7.253V19.2ZM36.27 27.224c.656.744 1.866 1.487 3.634 2.23 1.589-.675 2.713-1.4 3.374-2.178a4.07 4.07 0 0 0 .992-2.72c0-1.137-.402-2.041-1.208-2.712-.805-.67-1.914-1.004-3.324-1.004-1.39 0-2.478.337-3.267 1.013-.789.675-1.184 1.577-1.184 2.702 0 1.037.328 1.927.983 2.67Zm-.65 7.02c-.744.872-1.116 1.917-1.116 3.133 0 1.351.463 2.404 1.391 3.16.928.755 2.23 1.13 3.909 1.13 1.656 0 2.944-.392 3.865-1.18.923-.79 1.385-1.87 1.385-3.245 0-1.092-.433-2.063-1.3-2.913-.867-.851-2.378-1.676-4.533-2.476-1.656.72-2.856 1.518-3.6 2.391Zm-2.049-6.386c-.666-1.018-1-2.159-1-3.421 0-1.79.652-3.218 1.958-4.282 1.305-1.065 3.052-1.597 5.242-1.597 2.222 0 3.983.524 5.283 1.572 1.3 1.047 1.95 2.495 1.95 4.342 0 1.216-.372 2.325-1.117 3.328-.744 1.002-1.933 1.914-3.567 2.736 1.978.956 3.384 1.962 4.217 3.016.834 1.053 1.25 2.272 1.25 3.657 0 2.05-.706 3.685-2.116 4.907-1.412 1.222-3.345 1.833-5.8 1.833-2.6 0-4.6-.578-6-1.731-1.4-1.155-2.1-2.79-2.1-4.908 0-2.826 1.7-5.029 5.1-6.606-1.534-.877-2.634-1.826-3.3-2.846ZM32 64C14.327 64 0 49.673 0 32 0 14.327 14.327 0 32 0c3.73 0 7.313.638 10.642 1.812.025.568.025 2.677.025 2.668C39.347 3.183 35.779 2.56 32 2.56 15.74 2.56 2.56 15.74 2.56 32S15.74 61.44 32 61.44 61.44 48.26 61.44 32c0-3.769-.708-7.372-1.999-10.685 1.412.018 2.489.018 2.737.015A31.943 31.943 0 0 1 64 32c0 17.673-14.327 32-32 32ZM16.829 25.89l-1.466-1.925 6.45-5.052h2.332v24.698h-2.7V26.008c0-1.464.044-2.849.134-4.155-.234.236-.495.485-.784.744-.288.259-1.61 1.357-3.966 3.293Z"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <div
    class="prices height-limit"
    data-testid="product-info:prices"
  >
    <span
      class="root price"
      data-testid="product-info:price"
    >
      23 476,23 $
    </span>
  </div>
  <span
    class="adult-info"
    data-testid="product-info:adult-warning"
  >
    Подтвердите, что вы старше 18 лет, чтобы посмотреть товар.
  </span>
  <div
    class="footer"
    data-testid="product-info:footer"
  >
    <a
      class="link text-button basic-blue"
      data-testid="product-info:adult-confirm-button"
      role="button"
      tabindex="0"
    >
      Подтвердить
    </a>
  </div>
</div>
`;

exports[`ProductInfo regular content positioned image icon-buttons 1`] = `
<div>
  <span
    class="root image-overlay"
  >
    <a
      class="image-link"
      data-testid="product-info:image-link"
      href="https://www.products.com/some-product"
    >
      <img
        class="image"
        data-testid="product-info:image"
        src="https://www.images.com/some-product/1"
      />
    </a>
    <div
      class="image-buttons"
    >
      <div
        class="root image-button positioned left-top"
        data-testid="test-favorite-button"
        role="banner"
      >
        <svg
          class="stroke"
          height="24"
          stroke="#f5f5f5"
          stroke-width="3px"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M3 11.5a8.5 8.5 0 1 1 17 0 8.5 8.5 0 0 1-17 0ZM11.5 5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16.293 16.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414Z"
            fill-rule="evenodd"
          />
          <path
            d="M10.5 9a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V9Z"
          />
          <path
            d="M9 12.5a1 1 0 1 1 0-2h5a1 1 0 1 1 0 2H9Z"
          />
        </svg>
        <svg
          class="svg"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M3 11.5a8.5 8.5 0 1 1 17 0 8.5 8.5 0 0 1-17 0ZM11.5 5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16.293 16.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414Z"
            fill-rule="evenodd"
          />
          <path
            d="M10.5 9a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V9Z"
          />
          <path
            d="M9 12.5a1 1 0 1 1 0-2h5a1 1 0 1 1 0 2H9Z"
          />
        </svg>
      </div>
      <div
        class="root image-button positioned right-bottom"
        data-testid="quick-view-button"
        role="banner"
      >
        <svg
          class="stroke"
          height="24"
          stroke="#f5f5f5"
          stroke-width="3px"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M3 11.5a8.5 8.5 0 1 1 17 0 8.5 8.5 0 0 1-17 0ZM11.5 5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16.293 16.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414Z"
            fill-rule="evenodd"
          />
          <path
            d="M10.5 9a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V9Z"
          />
          <path
            d="M9 12.5a1 1 0 1 1 0-2h5a1 1 0 1 1 0 2H9Z"
          />
        </svg>
        <svg
          class="svg"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M3 11.5a8.5 8.5 0 1 1 17 0 8.5 8.5 0 0 1-17 0ZM11.5 5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16.293 16.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414Z"
            fill-rule="evenodd"
          />
          <path
            d="M10.5 9a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V9Z"
          />
          <path
            d="M9 12.5a1 1 0 1 1 0-2h5a1 1 0 1 1 0 2H9Z"
          />
        </svg>
      </div>
    </div>
  </span>
  <div
    class="prices height-limit"
    data-testid="product-info:prices"
  >
    <span
      class="root price"
      data-testid="product-info:price"
    >
      23 476,23 $
    </span>
    <span
      class="root old-price crossed-out"
      data-testid="product-info:old-price"
    >
      25 000 $
    </span>
  </div>
  <a
    class="link link line-clamp basic-gray87"
    data-testid="product-info:name-link"
    href="https://www.products.com/some-product"
  >
    Some product
  </a>
</div>
`;

exports[`ProductInfo regular content should match snapshot 1`] = `
<div>
  <span
    class="root image-overlay"
  >
    <a
      class="image-link"
      data-testid="product-info:image-link"
      href="https://www.products.com/some-product"
    >
      <img
        class="image"
        data-testid="product-info:image"
        src="https://www.images.com/some-product/1"
      />
    </a>
    <div
      class="image-buttons"
    >
      <div
        class="root image-button"
        data-testid="test-favorite-button"
        role="banner"
      >
        <svg
          class="stroke"
          height="24"
          stroke="#f5f5f5"
          stroke-width="3px"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M3 11.5a8.5 8.5 0 1 1 17 0 8.5 8.5 0 0 1-17 0ZM11.5 5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16.293 16.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414Z"
            fill-rule="evenodd"
          />
          <path
            d="M10.5 9a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V9Z"
          />
          <path
            d="M9 12.5a1 1 0 1 1 0-2h5a1 1 0 1 1 0 2H9Z"
          />
        </svg>
        <svg
          class="svg"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M3 11.5a8.5 8.5 0 1 1 17 0 8.5 8.5 0 0 1-17 0ZM11.5 5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16.293 16.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414Z"
            fill-rule="evenodd"
          />
          <path
            d="M10.5 9a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V9Z"
          />
          <path
            d="M9 12.5a1 1 0 1 1 0-2h5a1 1 0 1 1 0 2H9Z"
          />
        </svg>
      </div>
      <div
        class="root image-button"
        data-testid="quick-view-button"
        role="banner"
      >
        <svg
          class="stroke"
          height="24"
          stroke="#f5f5f5"
          stroke-width="3px"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M3 11.5a8.5 8.5 0 1 1 17 0 8.5 8.5 0 0 1-17 0ZM11.5 5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16.293 16.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414Z"
            fill-rule="evenodd"
          />
          <path
            d="M10.5 9a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V9Z"
          />
          <path
            d="M9 12.5a1 1 0 1 1 0-2h5a1 1 0 1 1 0 2H9Z"
          />
        </svg>
        <svg
          class="svg"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            clip-rule="evenodd"
            d="M3 11.5a8.5 8.5 0 1 1 17 0 8.5 8.5 0 0 1-17 0ZM11.5 5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13Z"
            fill-rule="evenodd"
          />
          <path
            clip-rule="evenodd"
            d="M16.293 16.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414Z"
            fill-rule="evenodd"
          />
          <path
            d="M10.5 9a1 1 0 1 1 2 0v5a1 1 0 1 1-2 0V9Z"
          />
          <path
            d="M9 12.5a1 1 0 1 1 0-2h5a1 1 0 1 1 0 2H9Z"
          />
        </svg>
      </div>
    </div>
  </span>
  <div
    class="root badges"
  >
    <div
      class="item"
    >
      <a
        class="root padding-x-default coloring-outline"
        data-testid="badge"
        style="--badge-color: #b52ea8;"
      >
        <span
          class="content"
        >
          -56%
        </span>
      </a>
    </div>
    <div
      class="item"
    >
      <a
        class="root padding-x-default coloring-outline"
        data-testid="badge"
        style="--badge-color: #ff7200;"
      >
        <span
          class="content"
        >
          3 по цене 2
        </span>
      </a>
    </div>
    <div
      class="item"
    >
      <a
        class="root padding-x-default coloring-outline"
        data-testid="badge"
        style="--badge-color: #2962ff;"
      >
        <span
          class="content"
        >
          Товар месяца
        </span>
      </a>
    </div>
    <div
      class="item"
    >
      <a
        class="root padding-x-default coloring-outline"
        data-testid="badge"
        style="--badge-color: #00b8d4;"
      >
        <span
          class="content"
        >
          Акция
        </span>
      </a>
    </div>
  </div>
  <div
    class="prices height-limit"
    data-testid="product-info:prices"
  >
    <span
      class="root price"
      data-testid="product-info:price"
    >
      23 476,23 $
    </span>
    <span
      class="root old-price crossed-out"
      data-testid="product-info:old-price"
    >
      25 000 $
    </span>
  </div>
  <a
    class="link link line-clamp basic-gray87"
    data-testid="product-info:name-link"
    href="https://www.products.com/some-product"
  >
    Some product
  </a>
  <div
    class="secondary-info"
  >
    Арт. 123456
  </div>
  <a
    class="link trademark-link basic-blue"
    data-testid="product-info:trademark-link"
    href="https://www.test-trademark.ru/"
  >
    Test Trademark
  </a>
  <div
    class="root size-unset hover-disabled rating"
    data-testid="rating-counter"
  >
    <svg
      class="star"
      height="16"
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        d="M7.536 1.545a.5.5 0 0 1 .928 0l1.711 4.262 4.583.311a.5.5 0 0 1 .287.883L11.52 9.945l1.12 4.454a.5.5 0 0 1-.75.546L8 12.503l-3.89 2.442a.5.5 0 0 1-.75-.546l1.12-4.454L.955 7.001a.5.5 0 0 1 .287-.883l4.583-.31 1.711-4.263Z"
      />
    </svg>
    <span
      class="value"
    >
      4,8
    </span>
    <span
      class="count"
    >
      943 отзыва
    </span>
  </div>
  <div
    class="footer"
    data-testid="product-info:footer"
  >
    <div
      class="control-wrapper"
    >
      <div
        class="control"
      >
        <button
          class="root size-s view-primary"
          data-testid="test-add-to-cart-button"
        >
          В корзину
        </button>
      </div>
      <div
        class="unit-text"
        data-testid="product-info:cart-step"
      >
        По 7 шт
      </div>
      <div
        class="bottom-text"
        data-testid="product-info:cart-info"
      >
        Комплектация + 50 ₽ при покупке до 20 шт
      </div>
    </div>
  </div>
</div>
`;
